AM_CFLAGS = $(LIBGUPNP_CFLAGS)

noinst_LTLIBRARIES = libxdgmime.la

libxdgmime_la_SOURCES = xdgmimealias.c	\
			xdgmimealias.h	\
			xdgmime.c	\
			xdgmime.h	\
			xdgmimecache.c	\
			xdgmimecache.h	\
			xdgmimeglob.c	\
			xdgmimeglob.h	\
			xdgmimeint.h	\
			xdgmimeint.c	\
			xdgmimemagic.h	\
			xdgmimemagic.c	\
			xdgmimeparent.h	\
			xdgmimeparent.c

MAINTAINERCLEANFILES = Makefile.in
